Update prediction service controller dan update patch url sraper ke chechurl
