# UserAPI/src/route/user-api.js
@@ -5,6 +5,7 @@ import profileController from "../controller/profile-controller.js";
 import { authMiddleware } from "../middleware/auth-middleware.js";
 import { upload } from '../middleware/upload-middleware.js';
 import scraperController from "../controller/scraper-controller.js";
+import predictController from "../controller/predict-controller.js";
 
 const userRoute = new express.Router();
 userRoute.use(authMiddleware)
@@ -13,6 +14,7 @@ userRoute.patch('/api/users/update', userController.update);
 userRoute.delete('/api/users/logout', userController.logout);
 userRoute.get('/api/logs/:id?', historyController.getLogs);
 userRoute.post('/api/users/profile-picture', upload.single('profilePicture'), profileController.updateProfilePicture);
-userRoute.post('/api/scraper', scraperController.scraper);
+userRoute.post('/api/checkurl', scraperController.scraper);
+userRoute.post('/api/predict', predictController.predict);
 
 export { userRoute };
